added card tracking
