# backend/src/controllers/api/v1/CardController.ts
@@ -1,13 +1,12 @@
 import type {Request as Req} from 'express';
-import {UniqueViolationError} from 'db-errors';
-import {randomUUID} from 'crypto';
 import CardRepository from '../../../repository/CardRepository';
 import Card from '../../../models/db/Card';
 import {Controller, Get, Middlewares, Path, Query, Request, Response, Route, SuccessResponse, Tags} from 'tsoa';
 import {isAuthenticatedMiddleware} from '../../../middleware/auth';
+import TcgCardBrief from '../../../models/tcgApi/TcgCard';
+import TcgCard from '../../../models/tcgApi/TcgCardBrief';
+import {randomUUID} from 'crypto';
 import {UUID} from '../../../models/api/uuid';
-import ApiBaseModelCreatedUpdated from '../../../models/api/ApiBaseModelCreatedUpdated';
-import {UUID as nodeUUID} from 'node:crypto';
 
 interface CardBriefVmV1 {
   /**
@@ -25,28 +24,49 @@ interface CardBriefVmV1 {
    * @maxLength 255
    */
   image: string;
+  /**
+   * @minLength 1
+   * @maxLength 15
+   */
+  language: string;
 }
 
-interface CardVmV1 extends ApiBaseModelCreatedUpdated {
+interface CardVmV1 {
+  /**
+   * @minLength 1
+   * @maxLength 255
+   */
+  uid: UUID;
+  /**
+   * @minLength 1
+   * @maxLength 255
+   */
+  id: string;
   /**
    * @minLength 1
    * @maxLength 255
    */
   name: string;
   /**
-   * @maxLength 32767
+   * @minLength 1
+   * @maxLength 255
    */
-  description: string;
+  setId: string;
   /**
-   * @maxLength 32
+   * @minLength 1
+   * @maxLength 255
    */
-  unit: string;
+  number: string;
   /**
-   * @maxLength 32
+   * @minLength 1
+   * @maxLength 255
    */
-  color: string;
-  minReference: number;
-  maxReference: number;
+  image: string;
+  /**
+   * @minLength 2
+   * @maxLength 15
+   */
+  language: string;
 }
 
 @Route('api/v1/cards')
@@ -58,14 +78,28 @@ export class CardController extends Controller {
   @Get()
   @SuccessResponse(200, 'Ok')
   async list(@Request() req: Req): Promise<CardVmV1[]> {
-    return this.repo.getAll(req.session.user!.id);
+    return this.repo.getAll();
   }
 
   @Get('search')
   @SuccessResponse(200, 'Ok')
   async search(@Query('q') searchText: string, @Request() req: Req): Promise<CardBriefVmV1[]> {
-    const byId: CardBriefVmV1[] = await fetch('https://api.tcgdex.net/v2/en/cards?id=like:' + searchText).then(res => res.json());
-    const byName: CardBriefVmV1[] = await fetch('https://api.tcgdex.net/v2/en/cards?name=like:' + searchText).then(res => res.json());
+    const byId: CardBriefVmV1[] = await fetch('https://api.tcgdex.net/v2/en/cards?id=like:' + searchText)
+      .then(res => this.validateTcpApiResponse(res))
+      .then(res => res.json())
+      .then(res => res.map((e: TcgCardBrief) => this.mapTcgCardBrief2CardBriefVmV1(e, 'en')))
+      .catch(e => {
+        console.error('Failed to search card by id for ' + searchText, e);
+        return [];
+      });
+    const byName: CardBriefVmV1[] = await fetch('https://api.tcgdex.net/v2/en/cards?name=like:' + searchText)
+      .then(res => this.validateTcpApiResponse(res))
+      .then(res => res.json())
+      .then(res => res.map((e: TcgCardBrief) => this.mapTcgCardBrief2CardBriefVmV1(e, 'en')))
+      .catch(e => {
+        console.error('Failed to search card by name for ' + searchText, e);
+        return [];
+      });
     const cards = [...byId];
     for (const card of byName) {
       if (!cards.find(e => e.id === card.id)) {
@@ -75,94 +109,67 @@ export class CardController extends Controller {
     return cards;
   }
 
-  @Get('{id}')
+  @Get('{uid}')
   @SuccessResponse(200, 'Ok')
   @Response(404, 'Not Found')
-  async getById(@Path() id: UUID, @Request() req: Req): Promise<CardVmV1> {
-    const label = await this.repo.getById(req.session.user!.id, id as nodeUUID);
-    if (label !== undefined) {
-      return label;
-    } else {
-      this.setStatus(404);
-      return undefined as any;
+  async getByUid(@Path() uid: string, @Request() req: Req): Promise<CardVmV1> {
+    //from cache
+    let card = await this.repo.getByUid(uid);
+    if (card !== undefined) {
+      return card;
     }
+
+    //not found
+    this.setStatus(404);
+    return undefined as any;
   }
 
-  @Post()
-  @SuccessResponse(201, 'Created')
-  @Response(409, 'Conflict')
-  async add(@Body() body: CardVmV1, @Request() req: Req): Promise<CardVmV1> {
-    let label = Card.fromJson(body);
-
-    label.id = randomUUID();
-    label.createdBy = req.session.user!.id;
-    label.updatedBy = req.session.user!.id;
-
-    try {
-      label = await this.repo.add(label);
-      this.setStatus(201);
-      return label;
-    } catch (err) {
-      if (err instanceof UniqueViolationError) {
-        this.setStatus(409);
-        return undefined as any;
-      } else {
-        throw err;
-      }
-    }
-  }
-
-  @Put()
+  @Get('{language}/{id}')
   @SuccessResponse(200, 'Ok')
   @Response(404, 'Not Found')
-  @Response(409, 'Conflict')
-  async update(@Body() body: CardVmV1, @Request() req: Req): Promise<CardVmV1> {
-    const label = Card.fromJson(body);
+  async getByLanguageAndId(@Path() language: string, @Path() id: string, @Request() req: Req): Promise<CardVmV1> {
+    //validate language
 
-    //get from db
-    const dblabel = await this.repo.getById(label.id, req.session.user!.id);
-    if (!dblabel) {
-      this.setStatus(404);
-      return undefined as any;
+    //from cache
+    let card = await this.repo.getByLanguageAndId(language, id);
+    if (card !== undefined) {
+      return card;
     }
 
-    //update props
-    dblabel.name = label.name;
-    dblabel.description = label.description;
-    dblabel.unit = label.unit;
-    dblabel.color = label.color;
-    dblabel.minReference = label.minReference;
-    dblabel.maxReference = label.maxReference;
-    dblabel.updatedBy = req.session.user!.id;
-
-    //save
-    try {
-      const updated = await this.repo.update(dblabel);
-      if (updated) {
-        return dblabel;
-      } else {
-        this.setStatus(404);
-        return undefined as any;
-      }
-    } catch (err) {
-      if (err instanceof UniqueViolationError) {
-        this.setStatus(409);
-        return undefined as any;
-      } else {
-        throw err;
-      }
+    //from api
+    const apiCard = await fetch('https://api.tcgdex.net/v2/' + language + '/cards/' + id)
+      .then(res => this.validateTcpApiResponse(res))
+      .then(res => res.json())
+      .catch(e => console.error('Failed to fetch card ' + language + '/' + id, e));
+    if (apiCard !== undefined) {
+      card = this.mapTcgCard2Card(apiCard, 'en');
+      await this.repo.add(card);
+      return card;
     }
+
+    //not found
+    this.setStatus(404);
+    return undefined as any;
   }
 
-  @Delete('{id}')
-  @SuccessResponse(204, 'Deleted')
-  @Response(404, 'Not Found')
-  async remove(@Path() id: UUID, @Request() req: Req): Promise<void> {
-    const deleted = await this.repo.remove(id as nodeUUID, req.session.user!.id);
-    if (deleted) {
-      this.setStatus(204);
+  private mapTcgCardBrief2CardBriefVmV1(brief: TcgCardBrief, language: string): CardBriefVmV1 {
+    return {
+      id: brief.id,
+      name: brief.name,
+      image: brief.image,
+      language: language,
+    };
+  }
+
+  private mapTcgCard2Card(card: TcgCard, language: string): Card {
+    return Card.new(randomUUID(), card.id, card.name, card.set.id, card.localId, card.image ?? '', language);
+  }
+
+  private async validateTcpApiResponse(res: Response): Promise<Response> {
+    if (200 <= res.status && res.status < 300) {
+      return res;
     } else {
-      this.setStatus(404);
+      throw new Error('TcgApi returned non-ok status code with body: ' + await res.text());
     }
   }
 }
